objects/Commissions__c.object
<CustomObject>
    <fields>
        <fullName>Accel_VGT_Go_Live_Date__c</fullName>
        <formula>Account__r.Accel_VGT_Live_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accel VGT Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commissions</relationshipLabel>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Record_Live_Date__c</fullName>
        <label>Original Record Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Timeframe__c</fullName>
        <formula>CASE(  RecordType.Id , 
&quot;0127A0000009aie&quot;, ( Accel_VGT_Go_Live_Date__c + 365),
 Accel_VGT_Go_Live_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Timeframe</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X12_Month_Commission__c</fullName>
        <formula>/* do not use

if(isblank(End_Date__c),
 (((Start_Date__c + 365)- Start_Date__c)/365)

, (( End_Date__c  -  Start_Date__c)/365))



if(isblank(End_Date__c),
 (((Account__r.Accel_VGT_Live_Date__c + 365)- Start_Date__c)/365)

, (( End_Date__c  -  Start_Date__c)/365))*/




if(isblank(End_Date__c),
 ((( Original_Record_Live_Date__c  + 365)- Start_Date__c)/365)

, (( End_Date__c  -  Start_Date__c)/365))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>12 Month Commission Split</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Commissions</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Commissions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <recordTypes>
        <fullName>Go_Live_RM_Commissions</fullName>
        <active>true</active>
        <label>Go Live RM Commissions</label>
    </recordTypes>
    <recordTypes>
        <fullName>X12_Month_RM_Commissions</fullName>
        <active>true</active>
        <label>12 Month RM Commissions</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>